RESOLVED FIXED 217490
[WinCairo] ASSERTION FAILED: m_renderingUpdateRemainingSteps.last().isEmpty() in WebCore::Page::finalizeRenderingUpdate since r268075
https://bugs.webkit.org/show_bug.cgi?id=217490
Summary [WinCairo] ASSERTION FAILED: m_renderingUpdateRemainingSteps.last().isEmpty()...
Fujii Hironori
Reported 2020-10-08 13:02:45 PDT
[WinCairo] ASSERTION FAILED: m_renderingUpdateRemainingSteps.last().isEmpty() in WebCore::Page::finalizeRenderingUpdate since r268075 WinCairo WK2 debug build fails the assertion WinCairo WK1 debug build doesn't fail. Bug 216726 – Redundant rendering updates can be scheduled from inside Page::updateRendering() ASSERTION FAILED: m_renderingUpdateRemainingSteps.last().isEmpty() C:\home\webkit\gb\Source\WebCore\page/Page.cpp(1655) : WebCore::Page::finalizeRenderingUpdate Callstack: > WTF.dll!WTFCrash() Line 295 C++ > WebKit2.dll!WTFCrashWithInfo(int __formal, const char * __formal, const char * __formal, int __formal) Line 672 C++ > WebKit2.dll!WebCore::Page::finalizeRenderingUpdate(WTF::OptionSet<enum WebCore::FinalizeRenderingUpdateFlags> flags) Line 1655 C++ > WebKit2.dll!WebKit::WebPage::finalizeRenderingUpdate(WTF::OptionSet<enum WebCore::FinalizeRenderingUpdateFlags> flags) Line 3899 C++ > WebKit2.dll!WebKit::DrawingAreaCoordinatedGraphics::display(WebKit::UpdateInfo & updateInfo) Line 756 C++ > WebKit2.dll!WebKit::DrawingAreaCoordinatedGraphics::display() Line 717 C++ > WebKit2.dll!WebKit::DrawingAreaCoordinatedGraphics::displayTimerFired() Line 692 C++ > WebKit2.dll!WTF::RunLoop::Timer<WebKit::DrawingAreaCoordinatedGraphics>::fired() Line 178 C++ > WTF.dll!WTF::RunLoop::TimerBase::timerFired() Line 165 C++ > WTF.dll!WTF::RunLoop::wndProc(HWND__ * hWnd, unsigned int message, unsigned __int64 wParam, __int64 lParam) Line 60 C++ > WTF.dll!WTF::RunLoop::RunLoopWndProc(HWND__ * hWnd, unsigned int message, unsigned __int64 wParam, __int64 lParam) Line 39 C++ > user32.dll!00007ffce3dc5c7d() Unknown > user32.dll!00007ffce3dc5672() Unknown > WTF.dll!WTF::RunLoop::run() Line 74 C++ > WebKit2.dll!WebKit::AuxiliaryProcessMain<WebKit::WebProcess,WebKit::WebProcessMainWin>(int argc, char * * argv) Line 69 C++ > WebKit2.dll!WebKit::WebProcessMain(int argc, char * * argv) Line 58 C++ > WebKitWebProcess.exe!main(int argc, char * * argv) Line 35 C++ > [Inline Frame] WebKitWebProcess.exe!invoke_main() Line 78 C++ > WebKitWebProcess.exe!__scrt_common_main_seh() Line 288 C++ > kernel32.dll!00007ffce5b67bd4() Unknown > ntdll.dll!00007ffce5d6ce51() Unknown
Attachments
Patch (2.59 KB, patch)
2020-10-08 13:33 PDT, Fujii Hironori
no flags
Simon Fraser (smfr)
Comment 1 2020-10-08 13:15:47 PDT
Run with EventLoop logging enabled. What bits remain?
Fujii Hironori
Comment 2 2020-10-08 13:17:48 PDT
m_renderingUpdateRemainingSteps was 0x2000. 0x2000 means RenderingUpdateStep::ScrollingTreeUpdate.
Fujii Hironori
Comment 3 2020-10-08 13:21:42 PDT
This bug seems easy. I'm going to submit patch to condition out ScrollingTreeUpdate by ENABLE(ASYNC_SCROLLING).
Simon Fraser (smfr)
Comment 4 2020-10-08 13:22:19 PDT
Sounds right.
Fujii Hironori
Comment 5 2020-10-08 13:33:25 PDT
Fujii Hironori
Comment 6 2020-10-08 14:18:00 PDT
Comment on attachment 410877 [details] Patch Clearing flags on attachment: 410877 Committed r268208: <https://trac.webkit.org/changeset/268208>
Fujii Hironori
Comment 7 2020-10-08 14:18:03 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2020-10-08 14:19:22 PDT
Note You need to log in before you can comment on or make changes to this bug.