[WinCairo] ASSERTION FAILED: m_renderingUpdateRemainingSteps.last().isEmpty() in WebCore::Page::finalizeRenderingUpdate since r268075 https://bugs.webkit.org/show_bug.cgi?id=217490

Reviewed by Simon Fraser.

When the assertion failed, m_renderingUpdateRemainingSteps was
0x2000 (ScrollingTreeUpdate). The flag ScrollingTreeUpdate should
be used only if ENABLE(ASYNC_SCROLLING).

* page/Page.cpp:
(WebCore::operator<<):
* page/Page.h:
Conditioned out ScrollingTreeUpdate by ENABLE(ASYNC_SCROLLING).

Canonical link: https://commits.webkit.org/230262@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268208 268f45cc-cd09-0410-ab3c-d52691b4dbfc